--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,32 @@
 html, body, h1, h2, h3, h4, h5, h6 {
-    font-family: "Roboto", sans-serif
+    font-family: "Roboto", sans-serif;
 }
+
+#background {
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("../images/mountains.jpg");
+    height: 100%;
+    overflow: hidden;
+}
+
 
 h2 {
     color: white;
+}
+
+.project_title {
+    color: #757575;
 }
 
 a {
     text-decoration: none;
 }
 
-a:hover {
-    color: teal;
+a:hover, .project_title:hover {
+    color: #1F2E35;
 }
 
 footer a + a {
